Fixed visible tab accessibility

--- a/src/sass/myservice-utilities.scss
+++ b/src/sass/myservice-utilities.scss
@@ -267,15 +267,18 @@
 }
 
 .transition-content {
+  transition: opacity $transition-time ease-in-out;
   height: 0;
   opacity: 0;
   overflow: hidden;
-  transition: opacity $transition-time ease-in-out;
+  visibility: hidden;
 }
 
 .transition-content--open {
-  height: auto;
-  opacity: 1;
+  height: initial;
+  opacity: initial;
+  visibility: visible;
 }
+
 
 
